--- a/FeynCalcBookDev/Extra/FeynCalc.html
+++ b/FeynCalcBookDev/Extra/FeynCalc.html
@@ -202,6 +202,8 @@
 <li><a href="../FCCanonicalizeDummyIndices.html">FCCanonicalizeDummyIndices</a> - canonicalizes dummy indices</li>
 <li><a href="../FCClearScalarProducts.html">FCClearScalarProducts</a> - removes all user-specific definitions of scalar products</li>
 <li><a href="../FCGetDimensions.html">FCGetDimensions</a> - returns the space-time dimensions of objects in the expression</li>
+<li><a href="../FCGetDummyIndices.html">FCGetDummyIndices</a> - extracts dummy indices in the expression</li>
+<li><a href="../FCGetFreeIndices.html">FCGetFreeIndices</a> - extracts free indices in the expression</li>
 <li><a href="../FCPermuteMomentaRules.html">FCPermuteMomentaRules</a> - generates rules for permutations of momenta</li>
 <li><a href="../FCRenameDummyIndices.html">FCRenameDummyIndices</a> - renames dummy indices</li>
 <li><a href="../FCReplaceMomenta.html">FCReplaceMomenta</a> - replaces momenta in the expression</li>
@@ -311,9 +313,10 @@
 <li><a href="../DB0.html">DB0</a> - derivative of <a href="../B0.html">B0</a> with respect to the external momentum</li>
 <li><a href="../DB1.html">DB1</a> - derivative of <a href="../B1.html">B1</a> with respect to the external momentum</li>
 <li><a href="../FCApart.html">FCApart</a> - backend of <a href="../%5BApartFF%5D(ApartFF).html">[ApartFF](ApartFF)</a>, works only on single loop integrals</li>
+<li><a href="../FCClausen.html">FCClausen</a> - Clausen’s function</li>
 <li><a href="../FCGramMatrix.html">FCGramMatrix</a> - generates the Gram matrix from the given momenta</li>
 <li><a href="../FCGramDeterminant.html">FCGramDeterminant</a> - calculates the Gram determinant</li>
-<li><a href="../FCClausen.html">FCClausen</a> - Clausen’s function</li>
+<li><a href="../FCDiffEqChangeVariables.html">FCDiffEqChangeVariables</a> - change of variables in a differential equation</li>
 <li><a href="../FCHideEpsilon.html">FCHideEpsilon</a> - substitutes <span class="math inline">\frac{1}{\varepsilon} - \Gamma_E + \log (4 \pi)</span> with <span class="math inline">\Delta</span></li>
 <li><a href="../FCShowEpsilon.html">FCShowEpsilon</a> - substitutes <span class="math inline">\Delta</span> with <span class="math inline">\frac{1}{\varepsilon} - \Gamma_E + \log (4 \pi)</span></li>
 <li><a href="../FCIntegral.html">FCIntegral</a> - head of loop integrals</li>
@@ -419,6 +422,7 @@
 <li><a href="../FCAttachTypesettingRule.html">FCAttachTypesettingRule</a>, <a href="../FCRemoveTypesettingRules.html">FCRemoveTypesettingRules</a> - attaches custom typesetting rules</li>
 <li><a href="../FCFAConvert.html">FCFAConvert</a> - converts a FeynArts amplitude to FeynCalc</li>
 <li><a href="../FCPrepareFAAmp.html">FCPrepareFAAmp</a> - auxiliary function for a partial conversion of a FeynArts amplitude to FeynCalc</li>
+<li><a href="../FCTP.html">FCTP</a>, <a href="../FCTripleProduct.html">FCTripleProduct</a> - triple product in 3 dimensions</li>
 <li><a href="../FermionSpinSum.html">FermionSpinSum</a> - constructs Dirac traces out of squared ampliudes with external Dirac fermions</li>
 <li><a href="../FeynRule.html">FeynRule</a> - determines Feynman rules from <a href="../Lagrangian.html">Lagrangian</a>s</li>
 <li><a href="../FieldDerivative.html">FieldDerivative</a>, <a href="../FDr.html">FDr</a> - field derivative</li>
