More docu updates.

--- a/FeynCalcBookDev/Extra/FeynCalc.html
+++ b/FeynCalcBookDev/Extra/FeynCalc.html
@@ -129,7 +129,7 @@
 <li><a href="../Expand2.html">Expand2</a> - alternative to Mathematica’s <code>Expand</code></li>
 <li><a href="../ExpandAll2.html">ExpandAll2</a> - alternative to Mathematica’s <code>ExpandAll</code></li>
 <li><a href="../Explicit.html">Explicit</a> - inserts explicit expressions for certain objects</li>
-<li><a href="../Factor1.html">Factor1</a>, <a href="../Factor2.html">Factor2</a> - alternatives to Mathematica’s <code>Factor</code></li>
+<li><a href="../Factor1.html">Factor1</a>, <a href="../Factor2.html">Factor2</a>, <a href="../Factor3.html">Factor3</a> - alternatives to Mathematica’s <code>Factor</code></li>
 <li><a href="../FactorList2.html">FactorList2</a> - alternative to Mathematica’s <code>FactorList2</code></li>
 <li><a href="../FC.html">FC</a> - changes the output format to <a href="../FeynCalcForm.html">FeynCalcForm</a></li>
 <li><a href="../FCAbbreviate.html">FCAbbreviate</a> - introduces abbreviations</li>
@@ -204,6 +204,7 @@
 <li><a href="../FCGetDimensions.html">FCGetDimensions</a> - returns the space-time dimensions of objects in the expression</li>
 <li><a href="../FCGetDummyIndices.html">FCGetDummyIndices</a> - extracts dummy indices in the expression</li>
 <li><a href="../FCGetFreeIndices.html">FCGetFreeIndices</a> - extracts free indices in the expression</li>
+<li><a href="../FCGetScalarProducts.html">FCGetScalarProducts</a> - returns scalar products assigned to some values</li>
 <li><a href="../FCPermuteMomentaRules.html">FCPermuteMomentaRules</a> - generates rules for permutations of momenta</li>
 <li><a href="../FCRenameDummyIndices.html">FCRenameDummyIndices</a> - renames dummy indices</li>
 <li><a href="../FCReplaceMomenta.html">FCReplaceMomenta</a> - replaces momenta in the expression</li>
