--- a/FeynCalcBookDev/Factor3.html
+++ b/FeynCalcBookDev/Factor3.html
@@ -102,7 +102,7 @@
 <h2 id="factor3">Factor3</h2>
 <p><code>Factor3[exp]</code> factors a rational function <code>exp</code> over the field of complex numbers.</p>
 <p><code>Factor3</code> is primarily meant to be used on matrices from differential equations and Feynman parametric representations of loop integrals. Its main goal is to rewrite all denominators such, that they can be integrated in terms of HPLs or GPLs (when possible).</p>
-<p>To avoid performance bottlenecks, in the case of ration functions only the denominator will be factored by default. This can be changed by setting the option <code>Numerator</code> to <code>True</code>.</p>
+<p>To avoid performance bottlenecks, in the case of rational functions only the denominator will be factored by default. This can be changed by setting the option <code>Numerator</code> to <code>True</code>.</p>
 <h3 id="see-also">See also</h3>
 <p><a href="Extra/FeynCalc.html">Overview</a>, <a href="FCIntegratePolyLogs.html">FCIntegratePolyLogs</a>.</p>
 <h3 id="examples">Examples</h3>
