More docu pages added.

--- a/FeynCalcBookDev/Extra/FeynCalc.html
+++ b/FeynCalcBookDev/Extra/FeynCalc.html
@@ -41,7 +41,8 @@
 <ul>
 <li><a href="Indices.html">Upper and lower indices</a></li>
 <li><a href="MasterIntegrals.html">Master integrals</a></li>
-<li><a href="FeynArtsSigns.html">FeynArts sign conventions</a></li>
+<li><a href="FeynArtsSigns.html">New FeynArts sign conventions</a></li>
+<li><a href="CustomModels.html">Custom FeynRules models</a></li>
 <li><a href="DiracAlgebra.html">Dirac algebra</a></li>
 </ul>
 <h2 id="basic-objects">Basic objects</h2>
@@ -336,6 +337,7 @@
 <li><a href="../FCLoopCreateRulesToGLI.html">FCLoopCreateRulesToGLI</a> - rewrites scalar products as linear combinations of <a href="../GLI.html">GLI</a>s with negative indices</li>
 <li><a href="../FCLoopEikonalPropagatorFreeQ.html">FCLoopEikonalPropagatorFreeQ</a> - checks if the integral contains eikonal propagators</li>
 <li><a href="../FCLoopExtract.html">FCLoopExtract</a> - extracts loop integrals</li>
+<li><a href="../FCLoopFindSectors.html">FCLoopFindSectors</a> - returns sectors for the given <a href="../GLI.html">GLI</a>s</li>
 <li><a href="../FCLoopFromGLI.html">FCLoopFromGLI</a> - converts <a href="../GLI.html">GLI</a>s into explicit integrals with <a href="../FeynAmpDenominator.html">FeynAmpDenominator</a>s</li>
 <li><a href="../FCLoopGetEtaSigns.html">FCLoopGetEtaSigns</a> - extracts the signs of <span class="math inline">i \eta</span> from all propagators</li>
 <li><a href="../FCLoopGLIDifferentiate.html">FCLoopGLIDifferentiate</a> - differentiates <a href="../GLI.html">GLI</a>s with respect to a scalar variable.</li>
