FeynHelpers dev docu updated.

--- a/FeynHelpersBookDev/Extra/Cite.html
+++ b/FeynHelpersBookDev/Extra/Cite.html
@@ -30,9 +30,10 @@
 <ul>
 <li><p><a href="https://home.bway.net/lewis/">FERMAT</a> if you are using <code>Fer*</code> functions</p></li>
 <li><p><a href="https://bitbucket.org/feynmanIntegrals/fire/">FIRE</a> if you are using <code>FIRE*</code> functions</p></li>
+<li><p><a href="https://gitlab.com/kira-pyred/kira/">Kira</a> if you are using <code>Kira*</code> functions</p></li>
+<li><p><a href="http://www.feynarts.de/looptools/">LoopTools</a> if you are using <code>LTools*</code> functions</p></li>
 <li><p><a href="https://packagex.hepforge.org/">Package-X</a> if you are using <code>PaX*</code> functions</p></li>
 <li><p><a href="https://secdec.readthedocs.io/en/stable/">pySecDec</a> if you are using <code>PSD*</code> functions</p></li>
-<li><p><a href="http://www.feynarts.de/looptools/">LoopTools</a> if you are using <code>LTools*</code> functions</p></li>
 <li><p><a href="http://cfif.ist.utl.pt/~paulo/qgraf.html">QGRAF</a> if you are using <code>QG*</code> functions</p></li>
 </ul>
 </body>
