--- a/FeynHelpersBookDev/Extra/FeynHelpers.html
+++ b/FeynHelpersBookDev/Extra/FeynHelpers.html
@@ -14,6 +14,22 @@
     ul.task-list{list-style: none;}
   </style>
   <link rel="stylesheet" href="../css/feyncalc.css" />
+  <script src="../js/katex.min.js"></script>
+  <script>document.addEventListener("DOMContentLoaded", function () {
+   var mathElements = document.getElementsByClassName("math");
+   var macros = [];
+   for (var i = 0; i < mathElements.length; i++) {
+    var texText = mathElements[i].firstChild;
+    if (mathElements[i].tagName == "SPAN") {
+     katex.render(texText.data, mathElements[i], {
+      displayMode: mathElements[i].classList.contains('display'),
+      throwOnError: false,
+      macros: macros,
+      fleqn: true
+     });
+  }}});
+  </script>
+  <link rel="stylesheet" href="../js/katex.min.css" />
 
 </head>
 <body>
@@ -57,12 +73,23 @@
 <li><a href="../FIREPrepareStartFile.html">FIREPrepareStartFile</a> - prepares a Mathematica script that generates the relevant FIRE .start file</li>
 <li><a href="../FIRERunReduction.html">FIRERunReduction</a> - starts reduction using C++ FIRE from the current notebook</li>
 <li><a href="../FIREToFCTopology.html">FIREToFCTopology</a> - converts the given FIRE topology to <code>FCTopology</code></li>
-<li><a href="../FIREBinaryPath.html">FIREBinaryPath</a>, <a href="../FIREBucket.html">FIREBucket</a>, <a href="../FIRECompressor.html">FIRECompressor</a>, <a href="../FIREFthreads.html">FIREFthreads</a>, <a href="../FIREIntegrals.html">FIREIntegrals</a>, <a href="../FIRELthreads.html">FIRELthreads</a>, <a href="../FIREMathematicaKernelPath.html">FIREMathematicaKernelPath</a>, <a href="../FIREPosPref.html">FIREPosPref</a>, <a href="../FIRESthreads.html">FIRESthreads</a>, <a href="../FIREThreads.html">FIREThreads</a> - options of functions related to the C++ FIRE interface</li>
+<li><a href="../FIREBinaryPath.html">FIREBinaryPath</a>, <a href="../FIREBucket.html">FIREBucket</a>, <a href="../FIRECompressor.html">FIRECompressor</a>, <a href="../FIREFthreads.html">FIREFthreads</a>, <a href="../FIREIntegrals.html">FIREIntegrals</a>, <a href="../FIRELthreads.html">FIRELthreads</a>, <a href="../FIREMathematicaKernelPath.html">FIREMathematicaKernelPath</a>, <a href="../FIREPosPref.html">FIREPosPref</a>, <a href="../FIREShowOutput.html">FIREShowOutput</a>, <a href="../FIRESthreads.html">FIRESthreads</a>, <a href="../FIREThreads.html">FIREThreads</a> - options of functions related to the C++ FIRE interface</li>
 </ul>
 <h2 id="mathematica-fire-interface">Mathematica FIRE interface</h2>
 <ul>
 <li><a href="../FIREBurn.html">FIREBurn</a> - reduced the given integral using Mathematica version of FIRE</li>
 <li><a href="../FIREAddPropagators.html">FIREAddPropagators</a>, <a href="../FIREConfigFiles.html">FIREConfigFiles</a>, <a href="../FIREPath.html">FIREPath</a>, <a href="../FIRERun.html">FIRERun</a>, <a href="../FIRESilentMode.html">FIRESilentMode</a>, <a href="../FIREStartFile.html">FIREStartFile</a>, <a href="../FIREUsingFermat.html">FIREUsingFermat</a> - options of functions related to the Mathematica FIRE interface</li>
+</ul>
+<h2 id="kira-interface">Kira interface</h2>
+<ul>
+<li><a href="../KiraCreateConfigFiles.html">KiraCreateConfigFiles</a> - creates configuration files for the reduction</li>
+<li><a href="../KiraCreateIntegralFile.html">KiraCreateIntegralFile</a> - creates list of integrals that need to be reduced</li>
+<li><a href="../KiraCreateJobFile.html">KiraCreateJobFile</a> - creates the job file to rund the redution</li>
+<li><a href="../KiraGetRS.html">KiraGetRS</a> - extracts the <span class="math inline">r</span> and <span class="math inline">s</span> parameters in the Kira/Reduze syntax</li>
+<li><a href="../KiraImportResults.html">KiraImportResults</a> - converts reduction results to <code>GLI</code>s</li>
+<li><a href="../KiraLabelSector.html">KiraLabelSector</a> - labels sectors using the Reduze notation</li>
+<li><a href="../KiraRunReduction.html">KiraRunReduction</a> - starts reduction using Kira from the current notebook</li>
+<li><a href="../KiraBinaryPath.html">KiraBinaryPath</a>, <a href="../KiraFermatPath.html">KiraFermatPath</a>, <a href="../KiraImplicitIncomingMomenta.html">KiraImplicitIncomingMomenta</a>, <a href="../KiraIntegrals.html">KiraIntegrals</a>, <a href="../KiraJobFileName.html">KiraJobFileName</a>, <a href="../KiraMassDimensions.html">KiraMassDimensions</a>, <a href="../KiraShowOutput.html">KiraShowOutput</a> - options of functions related to the KIRA interface</li>
 </ul>
 <h2 id="looptools-interface">LoopTools interface</h2>
 <ul>
