--- a/FeynHelpersBookDev/Extra/Install.html
+++ b/FeynHelpersBookDev/Extra/Install.html
@@ -46,35 +46,45 @@ InstallFeynHelpers[InstallFeynHelpersDevelopmentVersion-&gt;True]</code></pre>
 <p>Currently there is no native Windows version of FERMAT. The Linux version appears to be usable via WSL, but currently there is no support for that in FeynHelpers.</p>
 <h3 id="fire">FIRE</h3>
 <p>You can download the source code of FIRE from the <a href="https://bitbucket.org/feynmanIntegrals/fire">developer’s website</a>. The content should be extracted to <code>FileNameJoin[{$UserBaseDirectory, "Applications", "FIRE"}]</code>.</p>
+<p>We recommend to enable support for zstd, lthreads, tcmalloc, snappy and zlib via</p>
+<pre><code>./configure --enable_zlib --enable_snappy --enable_lthreads --enable_tcmalloc --enable_zstd</code></pre>
+<p>If you compile FIRE without the zstd support, you should change the option <code>FIRECompressor</code> of <code>FIRECreateConfigFile</code> to <code>"lz4"</code>. However, for performance reasons it is better to use the zstd compression algorithm.</p>
 <h4 id="linux-1">Linux</h4>
-<p>The instructions for compiling FIRE from source on Linux are provided <a href="https://bitbucket.org/feynmanIntegrals/fire/src/master/README.html">here</a>.</p>
+<p>The instructions for compiling FIRE from source on Linux are provided <a href="https://bitbucket.org/feynmanIntegrals/fire/src/master/">here</a>.</p>
 <h4 id="macos-1">macOS</h4>
 <p>The instructions for compiling FIRE from source on macOS can be found <a href="https://bitbucket.org/feynmanIntegrals/fire/issues/10/issue-of-the-installation-on-macos">here</a>.</p>
 <h4 id="windows-1">Windows</h4>
 <p>There is no native Windows port of FIRE. It should be possible to compile FIRE on WSL with an Ubuntu installation, but currently there is no support for that in FeynHelpers.</p>
-<h3 id="looptools">LoopTools</h3>
-<p>On the <a href="http://www.feynarts.de/looptools/">developer’s website</a> you can download not only the source code but also precompiled binaries</p>
-<h4 id="linux-or-macos">Linux or macOS</h4>
-<p>Copy the self-compiled or precompiled MathLink executable <code>LoopTools</code> to <code>FileNameJoin[{$UserBaseDirectory, "Applications", "FeynCalc", "AddOns", "FeynHelpers", "ExternalTools", "LoopTools"}]</code>.</p>
+<h3 id="kira">Kira</h3>
+<p>You can download the source code of Kira from the <a href="https://gitlab.com/kira-pyred/kira">developer’s website</a>. FeynHelpers does not require Kira to <em>generate</em> the corresponding yaml files. However, in order to actually do the reduction one has to run those scripts, which is possible only when Kira is installed.</p>
+<h4 id="linux-and-macos">Linux and macOS</h4>
+<p>The instructions for compiling Kira from source on Linux or macOS are provided <a href="https://gitlab.com/kira-pyred/kira">here</a>.</p>
 <h4 id="windows-2">Windows</h4>
-<p>Rename the self-compiled or precompiled MathLink executable <code>LoopTools.exe</code> to <code>LoopTools</code> and copy it to <code>FileNameJoin[{$UserBaseDirectory, "Applications", "FeynCalc", "AddOns", "FeynHelpers", "ExternalTools", "LoopTools"}]</code>.</p>
-<h3 id="pysecdec">pySecDec</h3>
-<p>The installation instructions for pySecDec can be found <a href="https://secdec.readthedocs.io/en/stable/installation.html#download-the-program-and-install">here</a>. FeynHelpers does not require pySecDec to <em>generate</em> the corresponding Python scripts. However, in order to actually compute the given loop integrals one has to run those scripts, which is possible only when pySecDec is installed.</p>
-<h4 id="linux-or-macos-1">Linux or macOS</h4>
-<p>It should be possible to install pySecDec via pip automatically.</p>
-<h4 id="windows-3">Windows</h4>
-<p>It could be possible to set up pySecDec on WSL, but currently it is unclear whether this can work.</p>
+<p>It should be possible to compile Kira on WSL with an Ubuntu installation, but currently there is no support for that in FeynHelpers.</p>
 <h3 id="package-x">Package-X</h3>
 <p>Package-X is not being developed or even maintained anymore. However, the author of the tool, Hiren H. Patel, kindly gave us permission to ship <code>OneLoop.m</code> (part of Package-X containing library of analytic results for Passarino-Veltman functions) together with FeynHelpers.</p>
 <p>Therefore, no separate installation of Package-X is needed.</p>
 <p>Please notice that you are using this library on your own risk. The lack of maintenance means that newly discovered bugs are not going to be fixed and there is no guarantee that it will continue to work with newer Mathematica versions.</p>
+<h3 id="pysecdec">pySecDec</h3>
+<p>The installation instructions for pySecDec can be found <a href="https://secdec.readthedocs.io/en/stable/installation.html#download-the-program-and-install">here</a>. FeynHelpers does not require pySecDec to <em>generate</em> the corresponding Python scripts. However, in order to actually compute the given loop integrals one has to run those scripts, which is possible only when pySecDec is installed.</p>
+<p>Notice that the default sector decomposition method configured in the pySecDec method is <code>geometric</code>, which requires an external program called <a href="https://www.normaliz.uni-osnabrueck.de">normaliz</a>. Please refer to the <a href="https://secdec.readthedocs.io/en/stable/installation.html?highlight=normaliz#the-geomethod-and-normaliz">corresponding section</a> in the pySecDec manual for further details on setting <code>normaliz</code> up.</p>
+<h4 id="linux-or-macos">Linux or macOS</h4>
+<p>It should be possible to install pySecDec via pip automatically.</p>
+<h4 id="windows-3">Windows</h4>
+<p>It could be possible to set up pySecDec on WSL, but currently it is unclear whether this can work.</p>
+<h3 id="looptools">LoopTools</h3>
+<p>On the <a href="http://www.feynarts.de/looptools/">developer’s website</a> you can download not only the source code but also precompiled binaries</p>
+<h4 id="linux-or-macos-1">Linux or macOS</h4>
+<p>Copy the self-compiled or precompiled MathLink executable <code>LoopTools</code> to <code>FileNameJoin[{$UserBaseDirectory, "Applications", "FeynCalc", "AddOns", "FeynHelpers", "ExternalTools", "LoopTools"}]</code>.</p>
+<h4 id="windows-4">Windows</h4>
+<p>Rename the self-compiled or precompiled MathLink executable <code>LoopTools.exe</code> to <code>LoopTools</code> and copy it to <code>FileNameJoin[{$UserBaseDirectory, "Applications", "FeynCalc", "AddOns", "FeynHelpers", "ExternalTools", "LoopTools"}]</code>.</p>
 <h3 id="qgraf">QGRAF</h3>
 <p>You can download the source code of QGRAF from the <a href="http://cfif.ist.utl.pt/~paulo/qgraf.html">developer’s website</a>.</p>
-<h4 id="linux-and-macos">Linux and macOS</h4>
+<h4 id="linux-and-macos-1">Linux and macOS</h4>
 <p>The compilation instructions can be found in the section “Compiling” of the manual <code>qgraf-3.x.y.pdf</code> inside the tarball. For example, on a Linux system equipped with a GNU Fortran compiler something like</p>
 <pre><code>gfortran qgraf-3.6.3.f08 -o qgraf</code></pre>
 <p>should do the job. Having compiled the program you need to move the binary file <code>qgraf</code> to <code>FileNameJoin[{$UserBaseDirectory, "Applications", "FeynCalc", "AddOns", "FeynHelpers", "ExternalTools", "QGRAF", "Binary"}]</code>.</p>
-<h4 id="windows-4">Windows</h4>
+<h4 id="windows-5">Windows</h4>
 <p>To extract the source code tarball of QGRAF you need a tool that can deal with tar.gz archives, e.g. <a href="https://www.7-zip.org/">7-zip</a>.</p>
 <p>To build QGRAF from source you need a FORTRAN compiler. You can use the <a href="https://sourceforge.net/projects/mingw-w64/files/mingw-w64">MinGW compiler</a> via the <em>MinGW-W64 Online Installer</em> (<code>MinGW-W64-install.exe</code>). When the <code>Settings</code> page appears in the installation wizard, change <code>Architecture</code> from <code>i686</code> to <code>x86_64</code>.</p>
 <p>Unfortunately, as of June 2022 the installer is broken and fails with the error message “file was downloaded incorrectly”. A possible workaround is described <a href="https://sourceforge.net/p/mingw-w64/support-requests/125/">here</a>. When you reach the <code>Installation folder</code> page in the installation wizard, open</p>
