--- a/FeynCalcBookDev/Extra/FeynCalc.html
+++ b/FeynCalcBookDev/Extra/FeynCalc.html
@@ -234,6 +234,7 @@
 <li><a href="../TensorFunction.html">TensorFunction</a> - defines an unspecified Lorentz tensor</li>
 <li><a href="../ThreeDivergence.html">ThreeDivergence</a> - calculates partial derivative with respect to a <span class="math inline">3</span>-vector</li>
 <li><a href="../TrickMandelstam.html">TrickMandelstam</a> - simplifies the expression by eliminating one of the Mandelstam variables</li>
+<li><a href="../ToLightConeComponents.html">ToLightConeComponents</a> - rewrties Lorentz tensors in terms of their components along the lightcone</li>
 <li><a href="../Uncontract.html">Uncontract</a> - uncontracts Lorentz indices of tensors and Dirac matrices</li>
 <li><a href="../UnDeclareFCTensor.html">UnDeclareFCTensor</a> - undeclares the given head to be a tensor</li>
 </ul>
@@ -314,7 +315,7 @@
 <ul>
 <li><a href="../A0.html">A0</a>, <a href="../A00.html">A00</a> - Passarino-Veltman 1-point integrals (tadpoles)</li>
 <li><a href="../Apart2.html">Apart2</a> - partial fractions loop integrals (only very simple cases)</li>
-<li><a href="../ApartFF.html">ApartFF</a> - performs partial fraction decomposition of arbitrary loop integrals</li>
+<li><a href="../ApartFF.html">ApartFF</a>, <a href="../FCLoopCreatePartialFractioningRules.html">FCLoopCreatePartialFractioningRules</a> - performs partial fraction decomposition of arbitrary loop integrals</li>
 <li><a href="../B0.html">B0</a>, <a href="../B00.html">B00</a>, <a href="../B1.html">B1</a>, <a href="../B11.html">B11</a> - Passarino-Veltman 2-point integrals (bubbles)</li>
 <li><a href="../C0.html">C0</a> - Passarino-Veltman <span class="math inline">3</span>-point integrals (triangles)</li>
 <li><a href="../CTdec.html">CTdec</a>, <a href="../Tdec.html">Tdec</a> - calculates tensor decomposition formulas for loop integrals</li>
@@ -361,6 +362,7 @@
 <li><a href="../FCLoopPropagatorPowersCombine.html">FCLoopPropagatorPowersCombine</a> - combines same propagators into one raised to the corresponding integer power</li>
 <li><a href="../FCLoopPropagatorPowersExpand.html">FCLoopPropagatorPowersExpand</a> - rewrites propagators raised to integer powers as products of propagators</li>
 <li><a href="../FCLoopPropagatorsToTopology.html">FCLoopPropagatorsToTopology</a> - auxiliary function that generates a list of propagators to describe a topology</li>
+<li><a href="../FCLoopRemovePropagator.html">FCLoopRemovePropagator</a> - removes specific propagators from given <code>FCTopology</code>s or <code>GLI</code>s</li>
 <li><a href="../FCLoopSamePropagatorHeadsQ.html">FCLoopSamePropagatorHeadsQ</a> - checks if the integral contains different types of propagators</li>
 <li><a href="../FCLoopRemoveNegativePropagatorPowers.html">FCLoopRemoveNegativePropagatorPowers</a> - rewrites propagators rasied to negative integer powers as numerators</li>
 <li><a href="../FCLoopSelectTopology.html">FCLoopSelectTopology</a> - selects topologies belonging for the given <code>GLI</code>s</li>
