FeynHelpers docu updated.

--- a/FeynHelpersBookDev/Extra/FeynHelpers.html
+++ b/FeynHelpersBookDev/Extra/FeynHelpers.html
@@ -42,11 +42,12 @@
 <li><a href="Cite.html">How to cite this package and the related tools</a></li>
 <li><a href="Install.html">Installation instructions</a></li>
 <li><a href="TensorReductionWithFermat.html">Tensor reduction with Fermat</a></li>
+<li><a href="PSDUsageExamples.html">pySecDec usage examples</a> - a small tutorial on using the pySecDec interface</li>
 </ul>
-<h2 id="generic-functions">Generic functions</h2>
+<h2 id="generic-functions-and-symbols">Generic functions and symbols</h2>
 <ul>
 <li><a href="../FeynHelpersHowToCite.html">FeynHelpersHowToCite</a> - references to be cited when using FeynHelpers</li>
-<li><a href="../$FeynHelpersDirectory.html">$FeynHelpersDirectory</a>, <a href="../$FeynHelpersLoadInterfaces.html">$FeynHelpersLoadInterfaces</a>, <a href="../$FeynHelpersVersion.html">$FeynHelpersVersion</a> - global variables needed for the proper functioning of FeynHelpers</li>
+<li><a href="../$FeynHelpersDirectory.html">$FeynHelpersDirectory</a>, <a href="../$FeynHelpersLastCommitDateHash.html">$FeynHelpersLastCommitDateHash</a>, <a href="../$FeynHelpersLoadInterfaces.html">$FeynHelpersLoadInterfaces</a>, <a href="../$FeynHelpersVersion.html">$FeynHelpersVersion</a> - global variables needed for the proper functioning of FeynHelpers</li>
 </ul>
 <h2 id="fermat-interface">Fermat interface</h2>
 <ul>
@@ -105,6 +106,7 @@
 <li><a href="../PSDCreatePythonScripts.html">PSDCreatePythonScripts</a> - creates Python scripts for evaluating the given integral with pySecDec</li>
 <li><a href="../PSDIntegrate.html">PSDIntegrate</a> - creates input for pySecDec’s numerical integration routines</li>
 <li><a href="../PSDLoopIntegralFromPropagators.html">PSDLoopIntegralFromPropagators</a> - converts the given loop integral into input for pySecDec’s <code>LoopIntegralFromPropagators</code></li>
+<li><a href="../PSDLoadNumericalResults.html">PSDLoadNumericalResults</a> - loads the numerical result from pySecDec</li>
 <li><a href="../PSDLoopPackage.html">PSDLoopPackage</a> - creates input for pySecDec’s <code>loop_package</code></li>
 <li><a href="../PSDLoopRegions.html">PSDLoopRegions</a> - creates input for pySecDec’s <code>loop_regions</code></li>
 <li><a href="../PSDSumPackage.html">PSDSumPackage</a> - creates input for pySecDec’s <code>sum_package</code></li>
