--- a/FeynCalcBookDev/Extra/FeynCalc.html
+++ b/FeynCalcBookDev/Extra/FeynCalc.html
@@ -39,11 +39,27 @@
 <p>FeynCalc is a Mathematica package for algebraic calculations in Quantum Field Theory and semi-automatic evaluation of Feynman Diagrams.</p>
 <h2 id="useful-information">Useful information</h2>
 <ul>
-<li><a href="Indices.html">Upper and lower indices</a></li>
+<li><a href="Install.html">Installation</a></li>
+<li><a href="Load.html">Loading the package</a></li>
+<li><a href="UpperLowerIndices.html">Upper and lower indices</a></li>
 <li><a href="MasterIntegrals.html">Master integrals</a></li>
 <li><a href="FeynArtsSigns.html">New FeynArts sign conventions</a></li>
 <li><a href="CustomModels.html">Custom FeynRules models</a></li>
-<li><a href="DiracAlgebra.html">Dirac algebra</a></li>
+<li><a href="DiracAlgebraFormulas.html">Useful formulas for Dirac algebra</a></li>
+</ul>
+<h2 id="tutorials">Tutorials</h2>
+<ul>
+<li><a href="../InternalExternal.html">Internal vs. external representations</a></li>
+<li><a href="../Contractions.html">Index contractions</a></li>
+<li><a href="../Dimensions.html">Dimensions</a></li>
+<li><a href="../Kinematics.html">Kinematics</a></li>
+<li><a href="../Expansions.html">Expanding and undoing expansions</a></li>
+<li><a href="../Indices.html">Handling indices</a></li>
+<li><a href="../DiracAlgebra.html">Dirac algebra</a></li>
+<li><a href="../ColorAlgebra.html">Color algebra</a></li>
+<li><a href="../Loops.html">Loops</a></li>
+<li><a href="../Nonrelativistic.html">Nonrelativistic calculations</a></li>
+<li><a href="../LightCone.html">Calculations with light-cone vectors</a></li>
 </ul>
 <h2 id="basic-objects">Basic objects</h2>
 <ul>
