Updated copyright years.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ title: Home
 
     <p>Some features of FeynCalc are:</p>
     <ul>
+	  <li>Multiloop topology identification and minimization </li>
       <li>Passarino-Veltman reduction of one-loop amplitudes to standard scalar integrals </li>
       <li> Tools for frequently occuring tasks like Lorentz index contraction, color factor calculation,
       Dirac matrix manipulation and traces, etc. </li>
@@ -60,9 +61,9 @@ title: Home
 
     <p>FeynCalc is covered by the GNU General Public License 3.</p>
 
-    <p>Copyright &copy; 1990-2022 Rolf Mertig</p>
-    <p>Copyright &copy; 1997-2022 Frederik Orellana,</p>
-    Copyright &copy; 2014-2022 Vladyslav Shtabovenko</li></p>
+    <p>Copyright &copy; 1990-2024 Rolf Mertig</p>
+    <p>Copyright &copy; 1997-2024 Frederik Orellana,</p>
+    Copyright &copy; 2014-2024 Vladyslav Shtabovenko</li></p>
 
     <p>FeynCalc is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as
