--- a/FeynHelpersBookDev/Extra/Cite.html
+++ b/FeynHelpersBookDev/Extra/Cite.html
@@ -8,10 +8,18 @@
   <style>
     code{white-space: pre-wrap;}
     span.smallcaps{font-variant: small-caps;}
-    span.underline{text-decoration: underline;}
-    div.column{display: inline-block; vertical-align: top; width: 50%;}
+    div.columns{display: flex; gap: min(4vw, 1.5em);}
+    div.column{flex: auto; overflow-x: auto;}
     div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
-    ul.task-list{list-style: none;}
+    /* The extra [class] is a hack that increases specificity enough to
+       override a similar rule in reveal.js */
+    ul.task-list[class]{list-style: none;}
+    ul.task-list li input[type="checkbox"] {
+      font-size: inherit;
+      width: 0.8em;
+      margin: 0 0.8em 0.2em -1.6em;
+      vertical-align: middle;
+    }
   </style>
   <link rel="stylesheet" href="../css/feyncalc.css" />
 
@@ -23,18 +31,30 @@
 <h2 id="citations">Citations</h2>
 <p>If you use FeynHelpers in your research, please cite</p>
 <ul>
-<li>V. Shtabovenko, <em>FeynHelpers: Connecting FeynCalc to FIRE and Package-X</em>, Comput. Phys. Commun., 218, 48-65, 2017, <a href="https://arxiv.org/abs/1611.06793">arXiv:1611.06793</a></li>
+<li>V. Shtabovenko, <em>FeynHelpers: Connecting FeynCalc to FIRE and
+Package-X</em>, Comput. Phys. Commun., 218, 48-65, 2017, <a
+href="https://arxiv.org/abs/1611.06793">arXiv:1611.06793</a></li>
 </ul>
-<p>Apart from that, you should also provide the proper academic attribution to the authors of the tools that you are using via the interfaces provided by FeynHelpers. Please check out the respective websites for the proper citation instructions.</p>
+<p>Apart from that, you should also provide the proper academic
+attribution to the authors of the tools that you are using via the
+interfaces provided by FeynHelpers. Please check out the respective
+websites for the proper citation instructions.</p>
 <p>The tools that should be cited are</p>
 <ul>
-<li><p><a href="https://home.bway.net/lewis/">FERMAT</a> if you are using <code>Fer*</code> functions</p></li>
-<li><p><a href="https://bitbucket.org/feynmanIntegrals/fire/">FIRE</a> if you are using <code>FIRE*</code> functions</p></li>
-<li><p><a href="https://gitlab.com/kira-pyred/kira/">Kira</a> if you are using <code>Kira*</code> functions</p></li>
-<li><p><a href="http://www.feynarts.de/looptools/">LoopTools</a> if you are using <code>LTools*</code> functions</p></li>
-<li><p><a href="https://packagex.hepforge.org/">Package-X</a> if you are using <code>PaX*</code> functions</p></li>
-<li><p><a href="https://secdec.readthedocs.io/en/stable/">pySecDec</a> if you are using <code>PSD*</code> functions</p></li>
-<li><p><a href="http://cfif.ist.utl.pt/~paulo/qgraf.html">QGRAF</a> if you are using <code>QG*</code> functions</p></li>
+<li><p><a href="https://home.bway.net/lewis/">FERMAT</a> if you are
+using <code>Fer*</code> functions</p></li>
+<li><p><a href="https://bitbucket.org/feynmanIntegrals/fire/">FIRE</a>
+if you are using <code>FIRE*</code> functions</p></li>
+<li><p><a href="https://gitlab.com/kira-pyred/kira/">Kira</a> if you are
+using <code>Kira*</code> functions</p></li>
+<li><p><a href="http://www.feynarts.de/looptools/">LoopTools</a> if you
+are using <code>LTools*</code> functions</p></li>
+<li><p><a href="https://packagex.hepforge.org/">Package-X</a> if you are
+using <code>PaX*</code> functions</p></li>
+<li><p><a href="https://secdec.readthedocs.io/en/stable/">pySecDec</a>
+if you are using <code>PSD*</code> functions</p></li>
+<li><p><a href="http://cfif.ist.utl.pt/~paulo/qgraf.html">QGRAF</a> if
+you are using <code>QG*</code> functions</p></li>
 </ul>
 </body>
 </html>
