--- a/FeynHelpersBookDev/Extra/FiestaUsageExamples.html
+++ b/FeynHelpersBookDev/Extra/FiestaUsageExamples.html
@@ -85,8 +85,8 @@
     code span.vs { color: #4070a0; } /* VerbatimString */
     code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warning */
   </style>
-  <link rel="stylesheet" href="css/feyncalc.css" />
-  <script defer="" src="js/katex.min.js"></script>
+  <link rel="stylesheet" href="../css/feyncalc.css" />
+  <script defer="" src="../js/katex.min.js"></script>
   <script>document.addEventListener("DOMContentLoaded", function () {
  var mathElements = document.getElementsByClassName("math");
  var macros = [];
@@ -101,7 +101,7 @@
    });
 }}});
   </script>
-  <link rel="stylesheet" href="js/katex.min.css" />
+  <link rel="stylesheet" href="../js/katex.min.css" />
 
 </head>
 <body>
