Another documentation update.

--- a/FeynHelpersBookDev/Extra/FeynHelpers.html
+++ b/FeynHelpersBookDev/Extra/FeynHelpers.html
@@ -52,17 +52,20 @@ href="https://feyncalc.github.io">FeynCalc</a> session.</p>
 <li><a href="Cite.html">How to cite this package and the related
 tools</a></li>
 <li><a href="Install.html">Installation instructions</a></li>
-<li><a href="TensorReductionWithFermat.html">Tensor reduction with
-Fermat</a></li>
 </ul>
 <h2 id="tutorials">Tutorials</h2>
 <ul>
-<li><a href="FiestaUsageExamples.html">FIESTA usage examples</a> - a
-small tutorial on using the FIESTA interface</li>
-<li><a href="PSDUsageExamples.html">pySecDec usage examples</a> - a
-small tutorial on using the pySecDec interface</li>
-<li><a href="QGRAFUsageExamples.html">QGRAF usage examples</a> - a small
-tutorial on using the QFRAF interface</li>
+<li><a href="FiestaUsageExamples.html">FIESTA usage examples</a></li>
+<li><a href="FireUsageExamples.html">FIRE usage examples</a></li>
+<li><a href="KiraUsageExamples.html">KIRA usage examples</a></li>
+<li><a href="LoopToolsUsageExamples.html">LoopTools usage
+examples</a></li>
+<li><a href="PackageXUsageExamples.html">Package-X usage
+examples</a></li>
+<li><a href="PSDUsageExamples.html">pySecDec usage examples</a></li>
+<li><a href="QGRAFUsageExamples.html">QGRAF usage examples</a></li>
+<li><a href="TensorReductionWithFermat.html">Tensor reduction with
+Fermat</a></li>
 </ul>
 <h2 id="generic-functions-and-symbols">Generic functions and
 symbols</h2>
@@ -266,6 +269,7 @@ related to the C++ FIRE interface</li>
 using Mathematica version of FIRE</li>
 <li><a href="../FIREAddPropagators.html">FIREAddPropagators</a>, <a
 href="../FIREConfigFiles.html">FIREConfigFiles</a>, <a
+href="../FIREOutput.html">FIREOutput</a>, <a
 href="../FIREPath.html">FIREPath</a>, <a
 href="../FIRERun.html">FIRERun</a>, <a
 href="../FIRESilentMode.html">FIRESilentMode</a>, <a
