--- a/FeynHelpersBookDev/FIREOutput.html
+++ b/FeynHelpersBookDev/FIREOutput.html
@@ -28,15 +28,21 @@
 <header id="title-block-header">
 <h1 class="title">FeynHelpers manual (development version)</h1>
 </header>
-<h2 id="fsasdexpandasy">FSASDExpandAsy</h2>
-<p><code>FSASDExpandAsy</code> is an option for
-<code>FSAPrepareMathematicaScripts</code> and other functions of the
-FIESTA interface. It specifies whether the integral should be
-asymptotically expanded using the method of regions. The default value
-is <code>False</code></p>
+<h2 id="fireoutput">FIREOutput</h2>
+<p><code>FIREShowOutput</code> is an option for
+<code>FIRECreateConfigFile</code> and other FIRE-related functions.</p>
+<p>It specifies the <code>#output</code> parameter to be set in a FIRE
+.config file. When set to <code>Default</code>, the file name is just
+the name of topology preceded by <code>".config"</code></p>
 <h3 id="see-also">See also</h3>
 <p><a href="Extra/FeynHelpers.html">Overview</a>, <a
-href="FSAPrepareMathematicaScripts.html">FSAPrepareMathematicaScripts</a>.</p>
+href="FIREThreads.html">FIREThreads</a>, <a
+href="FIRECompressor.html">FIRECompressor</a>, <a
+href="FIREFthreads.html">FIREFthreads</a>, <a
+href="FIRELthreads.html">FIRELthreads</a>, <a
+href="FIREIntegrals.html">FIREIntegrals</a>, <a
+href="FIREPosPref.html">FIREPosPref</a>, <a
+href="FIRESthreads.html">FIRESthreads</a>.</p>
 <h3 id="examples">Examples</h3>
 </body>
 </html>
