--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ title: Home
   <div class="column2">
     <!-- second column's content -->
     <h2>Installation</h2>
-    <p>For installation instructions please follow the steps outlined in our
-    <a href="https://github.com/FeynCalc/feyncalc/wiki">wiki</a>.
+    <p>For installation instructions please follow the steps outlined in the
+    <a href="https://feyncalc.github.io/FeynCalcBookDev/Extra/Install.html">manual</a>.
     The impatient can simply type
     <pre><small>Import["https://raw.githubusercontent.com/FeynCalc/feyncalc/master/install.m"];
 <br>InstallFeynCalc[]</small></pre>
