--- a/FeynCalcBookDev/Extra/UpperLowerIndices.html
+++ b/FeynCalcBookDev/Extra/UpperLowerIndices.html
@@ -8,10 +8,18 @@
   <style>
     code{white-space: pre-wrap;}
     span.smallcaps{font-variant: small-caps;}
-    span.underline{text-decoration: underline;}
-    div.column{display: inline-block; vertical-align: top; width: 50%;}
+    div.columns{display: flex; gap: min(4vw, 1.5em);}
+    div.column{flex: auto; overflow-x: auto;}
     div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
-    ul.task-list{list-style: none;}
+    /* The extra [class] is a hack that increases specificity enough to
+       override a similar rule in reveal.js */
+    ul.task-list[class]{list-style: none;}
+    ul.task-list li input[type="checkbox"] {
+      font-size: inherit;
+      width: 0.8em;
+      margin: 0 0.8em 0.2em -1.6em;
+      vertical-align: middle;
+    }
   </style>
   <link rel="stylesheet" href="../css/feyncalc.css" />
 
@@ -23,12 +31,20 @@
 <h2 id="upper-and-lower-indices">Upper and lower indices</h2>
 <h3 id="see-also">See also</h3>
 <p><a href="FeynCalc.html">Overview</a>.</p>
-<p>Here we list a set of rules that allows to reconstruct the positions of indices (upstairs or downstairs) appearing in FeynCalc expressions</p>
+<p>Here we list a set of rules that allows to reconstruct the positions
+of indices (upstairs or downstairs) appearing in FeynCalc
+expressions</p>
 <ul>
-<li>Every expression must satisfy Einsteins’s summation convention, both for Lorentz and Cartesian indices. Single terms containing more than two identical Lorentz or Cartesian indices are illegal and will lead to inconsistent results.</li>
-<li>In a contraction of two Lorentz indices it is understood that one of them is upstairs and the other is downstairs.</li>
-<li>In a contraction of two Cartesian indices, both indices are understood to be upper indices.</li>
-<li>A free Lorentz or Cartesian index is always understood to be an upper index</li>
+<li>Every expression must satisfy Einsteins’s summation convention, both
+for Lorentz and Cartesian indices. Single terms containing more than two
+identical Lorentz or Cartesian indices are illegal and will lead to
+inconsistent results.</li>
+<li>In a contraction of two Lorentz indices it is understood that one of
+them is upstairs and the other is downstairs.</li>
+<li>In a contraction of two Cartesian indices, both indices are
+understood to be upper indices.</li>
+<li>A free Lorentz or Cartesian index is always understood to be an
+upper index</li>
 </ul>
 </body>
 </html>
