--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@ title: Home
     <p>To support FeynCalc, please acknowledge our work when you use FeynCalc in your research.
     You can do so by citing the following FeynCalc papers:</p>
     <ul>
-
+      <li><p>V. Shtabovenko, R. Mertig and F. Orellana, "FeynCalc 10: Do multiloop integrals dream of computer codes?",
+          <a href="http://arxiv.org/abs/2312.14089">arXiv:2312.14089</a>.</p></li>  
       <li><p>V. Shtabovenko, R. Mertig and F. Orellana, "FeynCalc 9.3: New features and improvements",
           <a href="http://arxiv.org/abs/2001.04407">arXiv:2001.04407</a>.</p></li>
-
       <li><p>V. Shtabovenko, R. Mertig and F. Orellana, "New Developments in FeynCalc 9.0",
           <a href="http://dx.doi.org/10.1016/j.cpc.2016.06.008">Comput. Phys. Commun., 207, 432-444, 2016</a>,
           <a href="http://arxiv.org/abs/1601.01167">arXiv:1601.01167</a>.</p></li>
